# learn-video

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  config.toml  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.claude/PRPs/plans/completed/: friendly-cross-platform-installer.plan.md
.claude/PRPs/reports/: friendly-cross-platform-installer-report.md
.claude/PRPs/reviews/: friendly-installer-local-review.md
.github/workflows/: tests.yml
commands/: learn-video.md
docs/: architecture.md  examples.md  reference.md
learn_video/: __init__.py  cache.py  classify.py  cli.py  config.py  errors.py  ffmpeg_util.py  fuse.py  ingest.py  keyframes.py  logging_.py  model_client.py  pipeline.py  probe.py  state.py  summary.py  target.py  transcribe.py  vision.py
learn_video/tests/: test_cache.py  test_config.py  test_errors.py  test_fuse.py  test_ingest_format.py  test_installer.py  test_invoke_structured_empty.py  test_logging.py  test_probe.py  test_rate_limiter.py  test_state.py  test_summary.py  test_target_filtering.py  test_target_windows.py  test_transcribe_vtt.py  test_vision_parsing.py
scripts/: install.py
