[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-video"
version = "0.2.0"
description = "Extract reusable knowledge from video — fused audio + visual notes aligned to teaching moments."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "9Tech Solutions" }]
requires-python = ">=3.11"
keywords = ["claude", "agent-skills", "video", "knowledge-extraction", "langchain", "langgraph", "yt-dlp", "multimodal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.9,<3.0",
    "tenacity>=9.0",
    "json-repair>=0.30",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# `lite` — Gemini-only stack. Covers default --tier=lite and --tier=pro.
lite = [
    "yt-dlp>=2026.1.0",
    "faster-whisper>=1.2.0",
    "langgraph>=1.1.0,<2.0",
    "langchain>=1.2.0,<2.0",
    "langchain-core>=1.0.0,<2.0",
    "langchain-google-genai>=4.2.0,<5.0",
]
# `full` — lite + Anthropic (for --tier=max) + Ollama (for --offline).
full = [
    "learn-video[lite]",
    "langchain-anthropic>=1.4.0,<2.0",
    "langchain-ollama>=1.1.0,<2.0",
]
# `dev` — everything plus test runners. Required for contributing.
dev = [
    "learn-video[full]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
learn-video = "learn_video.cli:main"

[project.urls]
Homepage = "https://github.com/9Tech-Solutions/learn-video"
Issues = "https://github.com/9Tech-Solutions/learn-video/issues"
Changelog = "https://github.com/9Tech-Solutions/learn-video/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["learn_video*"]
exclude = ["learn_video.tests*"]
