[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-video"
version = "0.2.0"
description = "Extract reusable knowledge from video — fused audio + visual notes aligned to teaching moments."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "9Tech Solutions" }]
requires-python = ">=3.11"
keywords = ["claude", "agent-skills", "video", "knowledge-extraction", "langchain", "langgraph", "yt-dlp", "multimodal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.9,<3.0",
    "tenacity>=9.0",
    "json-repair>=0.30",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# `lite` — Gemini-only stack. Covers default --tier=lite and --tier=pro.
lite = [
    "yt-dlp>=2026.1.0",
    "faster-whisper>=1.2.0",
    "langgraph>=1.1.0,<2.0",
    "langchain>=1.2.0,<2.0",
    "langchain-core>=1.0.0,<2.0",
    "langchain-google-genai>=4.2.0,<5.0",
]
# `full` — lite + Anthropic (for --tier=max) + Ollama (for --offline).
full = [
    "learn-video[lite]",
    "langchain-anthropic>=1.4.0,<2.0",
    "langchain-ollama>=1.1.0,<2.0",
]
# `dev` — everything plus test runners + linters + type checker.
# Required for contributing.
dev = [
    "learn-video[full]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
]

[project.scripts]
learn-video = "learn_video.cli:main"

[project.urls]
Homepage = "https://github.com/9Tech-Solutions/learn-video"
Issues = "https://github.com/9Tech-Solutions/learn-video/issues"
Changelog = "https://github.com/9Tech-Solutions/learn-video/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["learn_video*"]
exclude = ["learn_video.tests*"]

# --- ruff ---------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".venv",
    "build",
    "dist",
    ".claude",
    "**/__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (likely-bug patterns)
    "UP",  # pyupgrade (use modern syntax)
    "SIM", # flake8-simplify (simpler constructs)
]
ignore = [
    "E501",  # line-too-long — handled by formatter / soft limit in CLAUDE.md
    "B008",  # function call in argument defaults — common with Field(default_factory=...)
    "SIM108", # prefer ternary — often harms readability
]

[tool.ruff.lint.per-file-ignores]
# Tests shadow imports and use magic-style names; relax rules there.
"learn_video/tests/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["learn_video"]

# --- mypy ---------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
# The provider SDKs and some deps lack complete stubs; we lazy-import them
# inside model_client and other modules. Don't gate CI on their typing.
ignore_missing_imports = false  # overridden per-module below

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
    "langchain_google_genai.*",
    "langchain_anthropic.*",
    "langchain_ollama.*",
    "langgraph.*",
    "google.*",
    "anthropic.*",
    "faster_whisper.*",
    "yt_dlp.*",
    "json_repair.*",
    "tenacity.*",
    "dotenv.*",
    "huggingface_hub.*",
    # scripts/install.py is not inside a package; test file sys.path-inserts it.
    "install",
]
ignore_missing_imports = true
